[workspace]
members = [
	"crates/*",
]

[workspace.dependencies]
assert2 = "0.3.10"
async-trait = "*"
axum = { version = "0.6.15", features = ["http2"] }
axum-extra = { version = "0.7.3", features = ["query"] }
bb8 = "*"
bb8-rusqlite = { git = "https://github.com/jeromegn/bb8-rusqlite", rev = "7dec4e0" }
bincode = "1.3.3"
bytes = "1.4.0"
camino = {version = "1.1.4", features = ["serde1"] }
compact_str = { version = "0.7.0", "features" = ["serde"] }
config = {version = "0.13.3", default-features = false, features = ["toml"] }
exprt = { git = "https://github.com/sahandevs/exprt", branch = "main" }
eyre = "0.6.8"
fallible-iterator = "0.2.0"
foca = { version = "0.11.0", features = ["std", "tracing", "bincode-codec", "serde"] }
futures = "0.3.28"
futures-util = "0.3.28"
hyper = { version = "0.14.26", features = ["h2", "http1", "http2", "server", "tcp", "stream", "client"] }
hyper-rustls = { version = "0.24.0", features = ["http2"] }
jsonschema = "0.17.0"
metrics = "0.21.0"
once_cell = "1.17.1"
parking_lot = { version = "0.12.1" }
pgwire = "0.13.0"
pin-project-lite = "0.2.9"
quoted-string = "0.6.1"
rand = { version = "0.8.5", features = ["small_rng"] }
rusqlite = { version = "0.29.0", features = ["serde_json", "time", "bundled", "uuid", "array", "load_extension", "column_decltype"] }
rusqlite_migration = "1.0.0"
rustls = "0.21.0"
rustls-pemfile = "1.0.2"
serde = "1.0.159"
serde_json = "1.0.95"
serde_with = "2.3.2"
speedy = { version = "0.8.6", features = ["uuid"] }
sqlite3-parser = "0.6.0"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.12", features = ["sync"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uhlc = "0.5.2"
uuid = { version = "1.3.1", features = ["v4", "serde"] }
webpki = { version = "0.22.0", features = ["std"] }
tempfile = "3.5.0"
tokio-postgres = "0.7.8"
lru = "0.8.1"
hostname = "*"
