[workspace]
members = [ ".antithesis/client/rust-load-generator",
	"crates/*",
	"integration-tests"
]
resolver = "2"

[workspace.dependencies]
arc-swap = { version = "1.6.0" }
antithesis_sdk = { version = "0.2.5", default-features = false }
assert2 = "0.3.10"
async-trait = "0.1.68"
axum = { version = "0.8.4", features = ["http2", "ws", "tracing"] }
deadpool = "0.12.0"
deadpool-sqlite = "0.12.0"
bincode = "2.0"
build-info = "0.0.35"
build-info-build = { version = "0.0.35" }
bytes = "1.4.0"
camino = {version = "1.1.4", features = ["serde1"] }
clap = { version = "4.2.4", features = ["derive"] }
compact_str = { version = "0.7.0", "features" = ["serde"] }
config = {version = "0.13.3", default-features = false, features = ["toml"] }
crc32fast = "1.3.2"
enquote = "1.1.0"
eyre = "0.6.8"
fallible-iterator = "0.3.0"
foca = { version = "0.19.0", features = ["std", "tracing", "bincode-codec", "serde"] }
futures = "0.3.28"
futures-util = "0.3.28"
governor = { version = "0.10.0" }
hex = "0.4.3"
hickory-resolver = "0.25"
hostname = "0.3.1"
http-body = "1.0"
http = { version = "1.3" }
hyper = { version = "1.7", features = ["http1", "http2", "server", "client"] }
hyper-rustls = { version = "0.27.0", default-features = false, features = ["http2", "ring"] }
hyper-util = "0.1"
indexmap = { version = "2.1.0", features = ["serde"] }
itertools = { version = "0.14" }
lazy_static = "1.5.0"
metrics = "0.24.2"
metrics-exporter-prometheus = { version = "0.17.2", default-features = false, features = ["http-listener"] }
metrics-util = { version = "0.20.0" }
nom = "7.0"
once_cell = "1.17.1"
opentelemetry = { version = "0.30.0" }
opentelemetry-otlp = { version = "0.30.0", default-features = false, features = ["grpc-tonic", "trace"] }
opentelemetry_sdk = { version = "0.30.0", features = ["experimental_trace_batch_span_processor_with_async_runtime", "experimental_async_runtime", "rt-tokio"] }
opentelemetry-semantic-conventions = { version = "0.30.0", features = ["semconv_experimental"] }
parking_lot = { version = "0.12.1" }
pin-project-lite = "0.2.9"
quinn = "0.11"
quinn-proto = "0.11"
quinn-plaintext = "0.3.0"
quoted-string = "0.6.1"
rand = { version = "0.9", features = ["small_rng"] }
rangemap = { version = "1.5.1", features = ["serde1"] }
rcgen = { version = "0.11.1", features = ["x509-parser"] }
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls", "rustls-tls-webpki-roots"] }
rhai = { version = "1.15.1", features = ["sync"] }
rusqlite = { version = "0.33.0", features = ["serde_json", "time", "bundled", "uuid", "array", "load_extension", "column_decltype", "vtab", "functions", "chrono", "series", "trace"] }
rustls = { version = "0.23.0", default-features = false, features = ["ring"] }
seahash = "4.1.0"
serde = "1.0.159"
serde_json = { version = "1.0.95", features = ["raw_value"] }
serde_with = "2.3.2"
smallvec = { version = "1.11.0", features = ["serde", "write", "union"] }
speedy = { version = "0.8.7", features = ["uuid", "smallvec", "indexmap", "indexmap_v2" ], package = "speedy" }
sqlite3-parser = "0.12.0"
strum = { version = "0.24.1", features = ["derive"] }
tempfile = "3.5.0"
thiserror = "1.0.40"
time = { version = "0.3.15", features = ["macros", "serde-well-known"] }
tokio = { version = "1.41", features = ["full"] }
tokio-metrics = "0.3.0"
tokio-serde = { version = "0.8", features = ["json"] }
tokio-stream = { version = "0.1.12", features = ["sync"] }
tokio-util = { version = "0.7.7", features = ["io", "codec", "net"] }
tower = { version = "0.5", features = ["limit", "load-shed", "buffer"] }
tower-http = { version = "0.6", features = ["trace", "auth"] }
tracing = "0.1.37"
tracing-filter = { version = "0.1.0-alpha.2", features = ["smallvec"] }
tracing-opentelemetry = { version = "0.31.0", default-features = false, features = ["tracing-log"]}
tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter"] }
tracing-test = "0.2"
uhlc = { version = "0.7", features = ["defmt"] }
uuid = { version = "1.3.1", features = ["v4", "serde"] }
webpki = { version = "0.22.0", default-features = false, features = ["std"] }

[profile.release]
debug = 1
incremental = true

[profile.dev]
debug = 1
incremental = true

[profile.dev.package."*"]
opt-level = 2

[profile.dev.build-override]
debug = false
opt-level = 3
codegen-units = 16

[profile.release.build-override]
opt-level = 3
codegen-units = 16

[profile.test.package.backtrace]
# backtraces are super expensive to compute in development,
# always optimize that crate
opt-level = 2

[workspace.lints.clippy]

