[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
assert_cmd = "2.0.12"
corro-tests = { path = "../crates/corro-tests" }
spawn = { path = "../crates/spawn" }
tokio = { workspace = true }
toml = { workspace = true }
tracing-subscriber = { workspace = true }
tripwire = { path = "../crates/tripwire" }