[package]
name = "integration-tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
assert_cmd = "2.0.12"
corro-tests = { path = "../crates/corro-tests" }
escargot = "0.5.8"
spawn = { path = "../crates/spawn" }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
tripwire = { path = "../crates/tripwire" }
once_cell = { workspace = true }