[package]
name = "consul-client"
version = "0.1.0-alpha.0"
edition = "2021"
description = "Consul client"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = { workspace = true }
hyper = { workspace = true }
hyper-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
webpki = { workspace = true }

[features]
