[package]
name = "consul-client"
version = "0.1.0-alpha.0"
description = "Consul client"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
camino = { workspace = true }
http.workspace = true
hyper-rustls = { workspace = true }
reqwest.workspace = true
rustls = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
webpki = { workspace = true }

[features]
