[package]
name = "corro-admin"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/superfly/corrosion"

[dependencies]
camino = { workspace = true }
corro-types = { path = "../corro-types" }
futures = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
spawn = { path = "../spawn" }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-serde = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tripwire = { path = "../tripwire" }