[package]
name = "corro-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
arc-swap = { workspace = true }
axum = { workspace = true }
backoff = { path = "../backoff" }
bincode = { workspace = true }
bytes = { workspace = true }
camino = { workspace = true }
compact_str = { workspace = true }
config = { workspace = true }
corro-types = { path = "../corro-types" }
eyre = { workspace = true }
foca = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hyper = { workspace = true }
metrics = { workspace = true }
parking_lot = { workspace = true }
quinn = { workspace = true }
quinn-plaintext = { workspace = true }
quoted-string = { workspace = true }
rand = { workspace = true }
rangemap = { workspace = true }
rusqlite = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = "*"
serde = { workspace = true }
serde_json = { workspace = true }
spawn = { path = "../spawn" }
speedy = { workspace = true }
sqlite3-parser = { workspace = true }
strum = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tripwire = { path = "../tripwire" }
trust-dns-resolver = { workspace = true }
uhlc = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
corro-tests = { path = "../corro-tests" }
http-body = { workspace = true }