[package]
name = "corro-agent"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
antithesis_sdk = { workspace = true }
arc-swap = { workspace = true }
axum = { workspace = true }
backoff = { path = "../backoff" }
bincode = { workspace = true }
bytes = { workspace = true }
camino = { workspace = true }
compact_str = { workspace = true }
config = { workspace = true }
corro-types = { path = "../corro-types" }
corro-utils = { path = "../corro-utils" }
eyre = { workspace = true }
foca = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hickory-resolver = { workspace = true }
hyper = { workspace = true }
itertools = { workspace = true }
metrics = { workspace = true }
opentelemetry = { workspace = true }
parking_lot = { workspace = true }
quinn = { workspace = true }
quinn-proto = { workspace = true }
quinn-plaintext = { workspace = true }
quoted-string = { workspace = true }
rand = { workspace = true }
rangemap = { workspace = true }
rusqlite = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = "*"
seahash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
spawn = { path = "../spawn" }
speedy = { workspace = true }
sqlite3-parser = { workspace = true }
sqlite-pool = { path = "../sqlite-pool" }
strum = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
tripwire = { path = "../tripwire" }
uhlc = { workspace = true }
uuid = { workspace = true }
corro-pg = { path = "../corro-pg" }
indexmap = { workspace = true }
governor.workspace = true

[dev-dependencies]
corro-tests = { path = "../corro-tests" }
http-body = { workspace = true }
