[package]
name = "corro-api-types"
version = "0.1.0-alpha.1"
edition = "2021"
description = "common API types for corrosion"
license = "MIT"
repository = "https://github.com/superfly/corrosion"

[dependencies]
async-trait = { workspace = true }
deadpool = { workspace = true }
camino = { workspace = true }
compact_str = { workspace = true }
hex = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
speedy = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true } 
tokio = { workspace = true }
