[package]
name = "corro-api-types"
version = "0.2.0-alpha.0"
description = "common API types for corrosion"
readme = "README.md"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
deadpool = { workspace = true }
camino = { workspace = true }
compact_str = { workspace = true }
hex = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
smallvec = { workspace = true }
speedy = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
