[package]
name = "corro-client"
version = "0.1.0-alpha.1"
edition = "2021"
description = "client to interact with corrosion"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bb8 = { workspace = true }
bytes = { workspace = true }
corro-api-types = { version = "0.1.0-alpha.1", path = "../corro-api-types" }
futures = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-serde = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[features]
