[package]
name = "corro-client"
version = "0.1.0-alpha.1"
edition = "2021"
description = "client to interact with corrosion"
license = "MIT"

[lints]
workspace = true

[dependencies]
bytes = { workspace = true }
corro-api-types = { version = "0.1.0-alpha.1", path = "../corro-api-types" }
corro-utils = { path = "../corro-utils" }
futures = { workspace = true }
hickory-resolver = { workspace = true }
http = { workspace = true }
http-body.workspace = true
pin-project-lite = { workspace = true }
reqwest.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
sqlite-pool = { path = "../sqlite-pool" }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
hyper.workspace = true
hyper-util.workspace = true
