[package]
name = "corro-consul"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "corro-consul"
path = "src/main.rs"

[dependencies]
bb8 = { workspace = true }
bb8-rusqlite = { workspace = true }
camino = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
consul = { path = "../consul" }
corro-types = { path = "../corro-types" }
eyre = { workspace = true }
futures = { workspace = true }
hostname = { workspace = true }
hyper = { workspace = true }
metrics = { workspace = true }
rusqlite = { workspace = true }
seahash = "4.1.0"
serde = { workspace = true }
serde_json = { workspace = true }
spawn = { path = "../spawn" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tripwire = { path = "../tripwire" }

[dev-dependencies]
corro-tests = { path = "../corro-tests" }
tempfile = { workspace = true }