[package]
name = "corro-devcluster"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
nom = { workspace = true }
clap = { workspace = true }