[package]
name = "corro-pg"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
compact_str = { workspace = true }
corro-types = { path = "../corro-types" }
futures = { workspace = true }
rusqlite = { workspace = true }
sqlparser = { version = "0.38" }
pgwire = { version = "0.16.1" }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
phf = "*"
postgres-types = { version = "0.2", features = ["with-time-0_3"] }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
corro-tests = { path = "../corro-tests" }
tokio-postgres = { version = "0.7.10" }
tripwire = { path = "../tripwire" }