[package]
name = "corro-pg"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
compact_str = { workspace = true }
corro-types = { path = "../corro-types" }
fallible-iterator = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
metrics = { workspace = true }
pgwire = { version = "0.16.1" }
postgres-types = { version = "0.2", features = ["with-time-0_3"] }
rusqlite = { workspace = true }
spawn = { path = "../spawn" }
sqlite3-parser = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tripwire = { path = "../tripwire" }
sqlparser = { version = "0.39.0" }
chrono = { version = "0.4.31" }
socket2 = { version = "0.5" }

[dev-dependencies]
corro-tests = { path = "../corro-tests" }
tokio-postgres = { version = "0.7.10" }
tracing-subscriber = { workspace = true }