[package]
name = "corro-pg"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
bytes = { workspace = true }
compact_str = { workspace = true }
corro-types = { path = "../corro-types" }
eyre = { workspace = true }
fallible-iterator = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
metrics = { workspace = true }
parking_lot.workspace = true
pgwire = { version = "0.32", default-features = false, features = ["server-api-ring"] }
pin-project-lite.workspace = true
postgres-types = { version = "0.2", features = ["with-time-0_3"] }
rusqlite = { workspace = true }
rustls = { workspace = true }
spawn = { path = "../spawn" }
sqlite3-parser = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tripwire = { path = "../tripwire" }
sqlparser = { version = "0.58.0" }
chrono = { version = "0.4.31" }
socket2 = { version = "0.6", features = ["all"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }

[dev-dependencies]
corro-tests = { path = "../corro-tests" }
tokio-postgres = { version = "0.7.12" }
tracing-subscriber = { workspace = true }
camino = { workspace = true }
tokio-postgres-rustls = "0.13.0"
rcgen = { workspace = true }
