[package]
name = "corro-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
corro-agent = { path = "../corro-agent" }
corro-types = { path = "../corro-types" }
eyre = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tripwire = { path = "../tripwire" }
uuid = { workspace = true }