[package]
name = "corro-tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
corro-agent = { path = "../corro-agent" }
corro-client = { path = "../corro-client" }
corro-types = { path = "../corro-types" }
sqlite-pool = { path = "../sqlite-pool" }
eyre = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tripwire = { path = "../tripwire" }
