[package]
name = "corro-tpl"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/superfly/corrosion"

[dependencies]
compact_str = { workspace = true }
corro-client = { path = "../corro-client" }
corro-types = { path = "../corro-types" }
csv = { version = "1.2.2" }
enquote = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hostname = { workspace = true }
indexmap = { workspace = true }
rhai = { workspace = true }
rhai-tpl = { version = "0.1.2" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true } 
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tripwire = { path = "../tripwire" }
uuid = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
corro-tests = { path = "../corro-tests" }