[package]
name = "corro-types"
version = "0.1.0-alpha.1"
edition = "2021"
description = "common types for corrosion"
license = "MIT"

[dependencies]
arc-swap = { workspace = true }
async-trait = { workspace = true }
deadpool = { workspace = true }
bytes = { workspace = true }
camino = { workspace = true }
circular-buffer = "0.1.3"
compact_str = { workspace = true }
config = { workspace = true }
consul-client = { version = "0.1.0-alpha.0", path = "../consul-client" }
corro-api-types = { version = "0.1.0-alpha.1", path = "../corro-api-types" }
enquote = { workspace = true }
fallible-iterator = { workspace = true }
foca = { workspace = true } 
futures = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
metrics = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
rangemap = { workspace = true }
rcgen = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
speedy = { workspace = true }
sqlite3-parser = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true } 
time = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tripwire = { version = "0.1.0-alpha.0", path = "../tripwire" }
uhlc = { workspace = true }
uuid = { workspace = true }
sqlite-pool = { path = "../sqlite-pool" }
seahash = { workspace = true }