[package]
name = "corrosion"
version = "0.1.0"
edition = "2021"

[dependencies]
arc-swap = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
backoff = { path = "../backoff" }
bb8 = { workspace = true }
bb8-rusqlite = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
camino = { workspace = true }
clap = { workspace = true }
compact_str = { workspace = true }
config = { workspace = true }
corro-admin = { path = "../corro-admin" }
corro-agent = { path = "../corro-agent" }
corro-types = { path = "../corro-types" }
crc32fast = { workspace = true }
eyre = { workspace = true }
fallible-iterator = { workspace = true }
foca = { workspace = true }
futures = { workspace = true }
hyper = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
pgwire = { workspace = true }
quoted-string = { workspace = true }
rand = { workspace = true }
rangemap = { workspace = true }
rusqlite = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
spawn = { path = "../spawn" }
speedy = { workspace = true }
sqlite3-parser = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-serde = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-filter = { workspace = true }
tracing-subscriber = { workspace = true }
tripwire = { path = "../tripwire" }
trust-dns-resolver = { workspace = true }
uhlc = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
corro-tests = { path = "../corro-tests" }
toml = { workspace = true }